--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -445,14 +445,14 @@
     <string name="connect_phone_change_error">Error changing phone number</string>
     <string name="connect_password_button">OK</string>
 
-    <string name="connect_pin_title_set">Recovery Code</string>
-    <string name="connect_pin_title_confirm">Confirm Recovery Code</string>
-    <string name="connect_pin_message_title">ConnectID Recovery Code</string>
-    <string name="connect_pin_message">Enter your 6-digit Recovery Code</string>
-    <string name="connect_pin">Enter Recovery Code</string>
-    <string name="connect_pin_repeat">Confirm Recovery Code</string>
-    <string name="connect_pin_length">Code must be %d digits</string>
-    <string name="connect_pin_mismatch">Codes must match</string>
+    <string name="connect_pin_title_set">Backup Code</string>
+    <string name="connect_pin_title_confirm">Confirm Backup Code</string>
+    <string name="connect_pin_message_title">PersonalId Backup Code</string>
+    <string name="connect_pin_message">Enter your 6-digit Backup Code</string>
+    <string name="connect_pin">Enter Backup Code</string>
+    <string name="connect_pin_repeat">Confirm Backup Code</string>
+    <string name="connect_pin_length">Backup code must be %d digits</string>
+    <string name="connect_pin_mismatch">Backup codes must match</string>
 
     <string name="connect_password_verify_title">Enter Your Password</string>
     <string name="connect_password_verify_message">Please enter your recovery password to continue.</string>
