--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -916,4 +916,6 @@
     <string name="connectid_photo_capture_take_photo_button">Take Photo</string>
     <string name="connectid_photo_capture_save_photo_button">Save Photo</string>
     <string name="connectid_photo_upload_failure">"Failed to save photo. Please check your internet and try again. "</string>
+    <string name="this_is_not_me"><u>This is not me</u></string>
+    <string name="welcome_back_msg">Welcome back %s</string>
 </resources>
