--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -918,4 +918,6 @@
     <string name="connectid_photo_capture_take_photo_button">Take Photo</string>
     <string name="connectid_photo_capture_save_photo_button">Save Photo</string>
     <string name="connectid_photo_upload_failure">"Failed to save photo. Please check your internet and try again. "</string>
+    <string name="configuration_process_api_failed">There is some issue right now. Can you please retry after some time.</string>
+
 </resources>
