--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -920,5 +920,5 @@
     <string name="connectid_photo_upload_failure">"Failed to save photo. Please check your internet and try again. "</string>
     <string name="this_is_not_me"><u>This is not me</u></string>
     <string name="welcome_back_msg">Welcome back %s</string>
-    <string name="configuration_process_api_failed">There is some issue right now. Can you please retry after some time.</string>
+    <string name="configuration_process_api_failed">Unable to contact our servers at this time. Please try again and report an issue if it persists.</string>
 </resources>
