--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -921,4 +921,6 @@
     <string name="this_is_not_me"><u>This is not me</u></string>
     <string name="welcome_back_msg">Welcome back %s</string>
     <string name="configuration_process_api_failed">Unable to contact our servers at this time. Please try again and report an issue if it persists.</string>
+    <string name="recovery_failed">Recovery failed</string>
+    <string name="recovery_failed_message">Looks like you’ve forgotten your Backup Code, we’re creating a new account for you</string>
 </resources>
