--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -358,7 +358,7 @@ License.
     <string name="choice_or">_____________    OU    _____________</string>
     <string name="busy_message">Nous sommes encore en train de traiter votre demande précédente. Veuillez réessayer plus tard.</string>
     <string name="connect_button_logged_in">Accéder au menu Connecter</string>
-    <string name="connect_db_corrupt">Un problème est survenu avec la base de données, veuillez récupérer votre compte.</string>
+    <string name="personalid_generic_error">Un problème est survenu avec la base de données, veuillez récupérer votre compte.</string>
     <string name="connect_registration_title">Inscription ConnectID</string>
     <string name="connect_signup">S\'inscrire</string>
     <string name="connect_recover">Récupérer</string>
