-renamed pin to backup code

--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -382,12 +382,12 @@ License.
     <string name="connect_phone_not_found">Numéro de téléphone introuvable</string>
     <string name="connect_phone_change_error">Erreur lors du changement de numéro de téléphone</string>
     <string name="connect_password_button">D\'ACCORD</string>
-    <string name="connect_pin_title_set">Choisissez le code PIN</string>
-    <string name="connect_pin_title_confirm">Confirmer le code PIN</string>
-    <string name="connect_pin">Entrez le code PIN</string>
-    <string name="connect_pin_repeat">Confirmer le code PIN</string>
-    <string name="connect_pin_length">Le code doit comporter %d chiffres</string>
-    <string name="connect_pin_mismatch">Les codes PIN doivent correspondre</string>
+    <string name="connect_backup_code_title_set">Choisissez le code PIN</string>
+    <string name="connect_backup_code_title_confirm">Confirmer le code PIN</string>
+    <string name="connect_backup_code">Entrez le code PIN</string>
+    <string name="connect_backup_code_repeat">Confirmer le code PIN</string>
+    <string name="connect_backup_code_length">Le code doit comporter %d chiffres</string>
+    <string name="connect_backup_code_mismatch">Les codes PIN doivent correspondre</string>
     <string name="connect_password_verify_title">Entrez votre mot de passe</string>
     <string name="connect_password_verify_message">Veuillez entrer votre mot de passe de récupération pour continuer.</string>
     <string name="connect_password_verify">Entrez le mot de passe</string>
@@ -397,11 +397,11 @@ License.
     <string name="connect_password_fail_message">Vous avez entré un mot de passe incorrect, veuillez réessayer.</string>
     <string name="connect_password_recovery_message">Vous avez entré le mauvais mot de passe trop de fois, vous devrez récupérer votre compte.</string>
     <string name="connect_password_fail_button">D\'ACCORD</string>
-    <string name="connect_pin_fail_title">Code erroné</string>
-    <string name="connect_pin_fail_message">Vous avez entré un code erroné, veuillez réessayer.</string>
-    <string name="connect_pin_recovery_message">Vous avez entré le mauvais code trop de fois, vous devrez récupérer votre compte.\n Sur l\'écran suivant, nous enverrons un code par SMS au numéro de téléphone alternatif associé à votre compte.</string>
-    <string name="connect_pin_confirm_message">Vous avez entré le mauvais code trop de fois, vous devrez configurer à nouveau le code.\n Sur l\'écran suivant, nous vous redirigerons vers la page de configuration du code.</string>
-    <string name="connect_pin_verify_forgot">Vous n\'avez pas ou avez oublié votre code ?</string>
+    <string name="connect_backup_fail_title">Code erroné</string>
+    <string name="connect_backup_code_fail_message">Vous avez entré un code erroné, veuillez réessayer.</string>
+    <string name="connect_backup_code_recovery_message">Vous avez entré le mauvais code trop de fois, vous devrez récupérer votre compte.\n Sur l\'écran suivant, nous enverrons un code par SMS au numéro de téléphone alternatif associé à votre compte.</string>
+    <string name="connect_backup_code_confirm_message">Vous avez entré le mauvais code trop de fois, vous devrez configurer à nouveau le code.\n Sur l\'écran suivant, nous vous redirigerons vers la page de configuration du code.</string>
+    <string name="connect_backup_code_verify_forgot">Vous n\'avez pas ou avez oublié votre code ?</string>
     <string name="connect_recovery_title">Récupération ConnectID</string>
     <string name="connect_recovery_alt_title">Téléphone alternatif</string>
     <string name="connect_recovery_alt_message">Sur l\'écran suivant, nous enverrons un code par SMS au numéro de téléphone alternatif associé à votre compte.</string>
