--- a/app/res/values-sw/strings.xml
+++ b/app/res/values-sw/strings.xml
@@ -382,12 +382,12 @@
     <string name="connect_phone_not_found">Nambari ya simu haijapatikana</string>
     <string name="connect_phone_change_error">Hitilafu katika kubadilisha nambari ya simu</string>
     <string name="connect_password_button">Sawa</string>
-    <string name="connect_pin_title_set">Chagua PIN</string>
-    <string name="connect_pin_title_confirm">Thibitisha PIN</string>
-    <string name="connect_pin">Weka PIN</string>
-    <string name="connect_pin_repeat">Thibitisha PIN</string>
-    <string name="connect_pin_length">Msimbo lazima uwe na tarakimu %d</string>
-    <string name="connect_pin_mismatch">PIN lazima zilingane</string>
+    <string name="connect_backup_code_title_set">Chagua PIN</string>
+    <string name="connect_backup_code_title_confirm">Thibitisha PIN</string>
+    <string name="connect_backup_code">Weka PIN</string>
+    <string name="connect_backup_code_repeat">Thibitisha PIN</string>
+    <string name="connect_backup_code_length">Msimbo lazima uwe na tarakimu %d</string>
+    <string name="connect_backup_code_mismatch">PIN lazima zilingane</string>
     <string name="connect_password_verify_title">Weka Nenosiri Lako</string>
     <string name="connect_password_verify_message">Tafadhali weka nenosiri lako la kurejesha akaunti ili kuendelea.</string>
     <string name="connect_password_verify">Weka Nenosiri</string>
@@ -397,11 +397,11 @@
     <string name="connect_password_fail_message">Umeingiza nenosiri lisilo sahihi, tafadhali jaribu tena.</string>
     <string name="connect_password_recovery_message">Umeingiza nenosiri lisilo sahihi mara nyingi sana, utahitaji kurejesha akaunti yako.</string>
     <string name="connect_password_fail_button">Sawa</string>
-    <string name="connect_pin_fail_title">Msimbo usio sahihi</string>
-    <string name="connect_pin_fail_message">Umeweka Msimbo usio sahihi, tafadhali jaribu tena.</string>
-    <string name="connect_pin_recovery_message">Umeweka Nambari isiyo sahihi mara nyingi sana, utahitaji kurejesha akaunti yako.\n Kwenye skrini inayofuata, tutatuma nambari ya kuthibitisha kupitia SMS kwa nambari mbadala ya simu inayohusishwa na akaunti yako.</string>
-    <string name="connect_pin_confirm_message">Umeweka Msimbo usio sahihi mara nyingi sana, itabidi usanidi msimbo tena.\n Kwenye skrini inayofuata, tutakuelekeza kwenye ukurasa wa msimbo wa kusanidi.</string>
-    <string name="connect_pin_verify_forgot">Je, huna au umesahau Nambari yako?</string>
+    <string name="connect_backup_fail_title">Msimbo usio sahihi</string>
+    <string name="connect_backup_code_fail_message">Umeweka Msimbo usio sahihi, tafadhali jaribu tena.</string>
+    <string name="connect_backup_code_recovery_message">Umeweka Nambari isiyo sahihi mara nyingi sana, utahitaji kurejesha akaunti yako.\n Kwenye skrini inayofuata, tutatuma nambari ya kuthibitisha kupitia SMS kwa nambari mbadala ya simu inayohusishwa na akaunti yako.</string>
+    <string name="connect_backup_code_confirm_message">Umeweka Msimbo usio sahihi mara nyingi sana, itabidi usanidi msimbo tena.\n Kwenye skrini inayofuata, tutakuelekeza kwenye ukurasa wa msimbo wa kusanidi.</string>
+    <string name="connect_backup_code_verify_forgot">Je, huna au umesahau Nambari yako?</string>
     <string name="connect_recovery_title">Urejeshaji wa ConnectID</string>
     <string name="connect_recovery_alt_title">Simu Mbadala</string>
     <string name="connect_recovery_alt_message">Kwenye skrini inayofuata, tutatuma nambari ya kuthibitisha kupitia SMS kwa nambari mbadala ya simu inayohusishwa na akaunti yako.</string>
