--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -371,14 +371,14 @@
     <string name="connect_phone_not_found">ቁጽሪ ስልኪ ሞባይል ኣይተረኽበን።</string>
     <string name="connect_phone_change_error">ቁጽሪ ስልኪ ቁፅሪ ሞባይል ኣብ ምቕያር ጌጋ</string>
     <string name="connect_password_button">እሺ</string>
-    <string name="connect_pin_title_set">ናይ ምሕዋይ ሕጊ</string>
-    <string name="connect_pin_title_confirm">ናይ ምሕዋይ ኮድ ኣረጋግጽ</string>
-    <string name="connect_pin_message_title">ConnectID ናይ ምሕዋይ ኮድ</string>
-    <string name="connect_pin_message">6 ኣሃዝ ዘለዎ ናይ ምሕዋይ ኮድካ ኣእቱ</string>
-    <string name="connect_pin">ናይ ምሕዋይ ኮድ ኣእትዉ</string>
-    <string name="connect_pin_repeat">ናይ ምሕዋይ ኮድ ኣረጋግጽ</string>
-    <string name="connect_pin_length">ኮድ %d ኣሃዝ ክኸውን ኣለዎ።</string>
-    <string name="connect_pin_mismatch">ኮዳት ክሰማምዑ ኣለዎም።</string>
+    <string name="connect_backup_code_title_set">ናይ ምሕዋይ ሕጊ</string>
+    <string name="connect_backup_code_title_confirm">ናይ ምሕዋይ ኮድ ኣረጋግጽ</string>
+    <string name="connect_backup_code_message_title">ConnectID ናይ ምሕዋይ ኮድ</string>
+    <string name="connect_backup_code_message">6 ኣሃዝ ዘለዎ ናይ ምሕዋይ ኮድካ ኣእቱ</string>
+    <string name="connect_backup_code">ናይ ምሕዋይ ኮድ ኣእትዉ</string>
+    <string name="connect_backup_code_repeat">ናይ ምሕዋይ ኮድ ኣረጋግጽ</string>
+    <string name="connect_backup_code_length">ኮድ %d ኣሃዝ ክኸውን ኣለዎ።</string>
+    <string name="connect_backup_code_mismatch">ኮዳት ክሰማምዑ ኣለዎም።</string>
     <string name="connect_password_verify_title">ናይ ይሕለፍ ቃል/ ፓስዎርድ ኣእቱ</string>
     <string name="connect_password_verify_message">በይዛኩም ናብ ንቡር ንምምላስ ንኽትቅፅሉ ናይ ይሕለፍ ቃል/ ፓስዎርድካ ኣእትዉ።</string>
     <string name="connect_password_verify">ናይ ይሕለፍ ቃል/ ፓስዎርድ ኣእቱ</string>
@@ -388,11 +388,11 @@
     <string name="connect_password_fail_message">ጌጋ ናይ ይሕለፍ ቃል/ ፓስዎርድ ኣእቲኻ፡ በጃኻ ደጊምካ ፈትን።</string>
     <string name="connect_password_recovery_message">ጌጋ ናይ ይሕለፍ ቃል/ ፓስዎርድ ብዙሕ ግዜ ኣእቲኻዮ፣ ኣካውንትካ ናብ ንቡር ምምላስ ከድልየካ እዩ።</string>
     <string name="connect_password_fail_button">እሺ</string>
-    <string name="connect_pin_fail_title">ጌጋ ኮድ</string>
-    <string name="connect_pin_fail_message">ጌጋ ኮድ ኣእቲኻ፤ በይዛኻ ደጊምካ ፈትን።</string>
-    <string name="connect_pin_recovery_message">ጌጋ ኮድ ብዙሕ ግዜ ኣእቲኻ፡ ኣካውንትካ ናብ ንቡር ኩነታት ክትመልስ ከድልየካ እዩ።\n ኣብ ዝቕጽል ስክሪን፤ ብኤስኤምኤስ/ ብመልእክቲ ፅሑፍ ናብቲ ምስ ኣካውንትካ ዝተኣሳሰር ኣማራጺ ቁጽሪ ስልኪ ሞባይል ኮድ ክንሰድድ ኢና።</string>
-    <string name="connect_pin_confirm_message">ጌጋ ኮድ ብዙሕ ግዜ ኣእቲኻ፡ ነቲ ኮድ እንደገና ክተስተካክሎ ክትግደድ ኢኻ።\n ኣብ ዝቕጽል ስክሪን፡ ናብቲ ናይ መስተካከሊ ኮድ ገጽ ክንመርሐካ ኢና።</string>
-    <string name="connect_pin_verify_forgot">ኮድ ረሲዐዮ</string>
+    <string name="connect_backup_fail_title">ጌጋ ኮድ</string>
+    <string name="connect_backup_code_fail_message">ጌጋ ኮድ ኣእቲኻ፤ በይዛኻ ደጊምካ ፈትን።</string>
+    <string name="connect_backup_code_recovery_message">ጌጋ ኮድ ብዙሕ ግዜ ኣእቲኻ፡ ኣካውንትካ ናብ ንቡር ኩነታት ክትመልስ ከድልየካ እዩ።\n ኣብ ዝቕጽል ስክሪን፤ ብኤስኤምኤስ/ ብመልእክቲ ፅሑፍ ናብቲ ምስ ኣካውንትካ ዝተኣሳሰር ኣማራጺ ቁጽሪ ስልኪ ሞባይል ኮድ ክንሰድድ ኢና።</string>
+    <string name="connect_backup_code_confirm_message">ጌጋ ኮድ ብዙሕ ግዜ ኣእቲኻ፡ ነቲ ኮድ እንደገና ክተስተካክሎ ክትግደድ ኢኻ።\n ኣብ ዝቕጽል ስክሪን፡ ናብቲ ናይ መስተካከሊ ኮድ ገጽ ክንመርሐካ ኢና።</string>
+    <string name="connect_backup_code_verify_forgot">ኮድ ረሲዐዮ</string>
     <string name="connect_recovery_title">ConnectID ናብ ንቡር ምምላስ</string>
     <string name="connect_recovery_alt_title">ኣማራፂ ስልኪ</string>
     <string name="connect_recovery_alt_message">ኣብ ዝቕጽል ስክሪን፤ ብኤስኤምኤስ/ ብመልእክቲ ፅሑፍ ናብቲ ምስ ኣካውንትኩም ዝተኣሳሰር ኣማራጺ ቁጽሪ ስልኪ ሞባይል ኮድ ክንሰድድ ኢና።</string>
