--- a/app/res/values-sw/strings.xml
+++ b/app/res/values-sw/strings.xml
@@ -386,6 +386,7 @@
     <string name="connect_otp_verified">OTP Imethibitishwa</string>
     <string name="connect_otp_error">Hitilafu ya OTP</string>
     <string name="connect_enter_otp">Ingiza OTP</string>
+    <string name="connect_otp_verification_failed">Uthibitishaji wa OTP umeshindwa kutokana na</string>
     <string name="connect_pin_title_set">Chagua PIN</string>
     <string name="connect_pin_title_confirm">Thibitisha PIN</string>
     <string name="connect_pin">Weka PIN</string>
