--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -1021,3 +1021,4 @@ microimage.cropping.failed=Image cropping failed, make sure the target is inside
 microimage.decoding.no.image=Image processing failed. Please try again
 microimage.scalingdown.compression.error=Image compression failed. Please try again
 microimage.manual.face.capture.failed=Manual capture failed, contact CommCare Support if the issue persists
+microimage.camera.permission.denied=Go to settings and enable camera permission to use this feature
